--- a/k8s/01-rbac.yaml
+++ b/k8s/01-rbac.yaml
@@ -1,21 +1,24 @@
-# アプリケーションにクラスタ全体の管理者権限を付与するための設定
-# ServiceAccount: アプリケーションが使用するID
+# k8s/01-rbac.yaml
+
+# アプリケーションが使用するIDとなるServiceAccountを定義
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cluster-admin-sa
 
 ---
-# ClusterRoleBinding: ServiceAccountを既存のcluster-adminロールに紐付け
+# ServiceAccountを既存のcluster-adminロールに紐付けるClusterRoleBindingを定義
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: wiz-app-cluster-admin-binding
 subjects:
 - kind: ServiceAccount
+  # どのIDに権限を与えるか
   name: cluster-admin-sa
-  namespace: default # ServiceAccountが存在するnamespaceを指定
+  namespace: default 
 roleRef:
   kind: ClusterRole
-  name: cluster-admin # Kubernetesに組み込まれている管理者ロール
+  # どのような権限を与えるか (cluster-adminは最強の権限)
+  name: cluster-admin 
   apiGroup: rbac.authorization.k8s.io
